--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-epilogue",
+  "name": "epilogue",
   "description": "Create REST resources and controllers with Sequelize and Express",
   "version": "0.0.2",
   "author": "David Chester <dchester@shutterstock.com>",
