--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "async": "*",
     "sequelize": "*",
-    "express": "*",
+    "express": ">= 3.0.0",
     "underscore": "*"
   }
 }
