add git repo in package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "epilogue",
   "description": "Create REST resources and controllers with Sequelize and Express",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "David Chester <dchester@shutterstock.com>",
   "main": "lib/",
   "scripts": {
     "test": "node_modules/nodeunit/bin/nodeunit tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dchester/epilogue.git"
   },
   "devDependencies": {
     "nodeunit": "*",
