run jshint on tests as well, fixed resulting errors

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,13 @@
   "strict": true,
   "trailing":true,
   "undef":true,
-  "esnext":true
+  "esnext":true,
+  "predef": [
+    "describe",         // Used by mocha
+    "it",               // Used by mocha
+    "before",           // Used by mocha
+    "beforeEach",       // Used by mocha
+    "after",            // Used by mocha
+    "afterEach"         // Used by mocha
+  ]
 }
