--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "sqlite3": "~2.2.0",
     "request": "~2.34.0",
-    "express": ">=3.0.0",
+    "express": "3.x",
     "mocha": ">=1.17.0",
     "chai": ">= 1.9.0",
     "jshint": ">=2.4.2",
