--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "type": "git",
     "url": "https://github.com/dchester/epilogue.git"
   },
+  "keywords": [
+    "sequelize",
+    "sequelizejs",
+    "rest",
+    "restful",
+    "epilogue",
+    "json"
+  ],
   "devDependencies": {
     "sqlite3": "~2.2.0",
     "request": "~2.34.0",
