--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sqlite3": "~2.2.0",
     "request": "~2.34.0",
     "express": "3.x",
+    "restify": "~2.8.3",
     "mocha": ">=1.17.0",
     "chai": ">= 1.9.0",
     "jshint": ">=2.4.2",
