rework test structure
This splits the tests into folders relevant to the parts of the
code they are actually testing. Also, the npm test command was
modified to only test files with .test.js extensions, ancitipating
my next cleanup to refactor out some of the boilerplate from all
tests

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "lib/",
   "scripts": {
     "jshint": "jshint ./lib ./tests",
-    "mocha": "mocha --check-leaks -R spec -u exports tests/*.js",
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- -- tests/*.js",
-    "test": "npm run-script jshint && npm run-script mocha && npm run-script istanbul"
+    "mocha": "mocha --check-leaks -R spec -u exports tests/*.test.js tests/**/*.test.js",
+    "coverage": "istanbul cover node_modules/.bin/_mocha -- -- tests/*.test.js tests/**/*.test.js",
+    "test": "npm run-script jshint && npm run-script mocha"
   },
   "repository": {
     "type": "git",
