begin work on version 0.4.0
- make sequelize 2.0 a requirement
- clean out 1.7 related cruft
- consolidate error management (validations/constraint errors)

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "mocha": ">=1.17.0",
     "chai": ">= 1.9.0",
     "jshint": ">=2.4.2",
-    "sequelize": "~1.7.0-rc6",
-    "istanbul": "~0.1.45"
+    "istanbul": "~0.1.45",
+    "sequelize": "git://github.com/sequelize/sequelize#master"
   }
 }
