generate endpoints if not provided
The only thing we really need for a resource is a model. This
change allows the user to specify only a model, leaving it up
to epilogue to automatically generate endpoints. This brings
with it a new depedency on node-inflection, however the module
will prove useful again for automatic associations in the near
future.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   ],
   "dependencies": {
     "async": "~0.2.10",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "inflection": "1.5.3"
   },
   "devDependencies": {
     "sqlite3": "~2.2.0",
