--- a/.jshintrc
+++ b/.jshintrc
@@ -19,11 +19,11 @@
   "undef":true,
   "esnext":true,
   "predef": [
-    "describe",         // Used by mocha
-    "it",               // Used by mocha
-    "before",           // Used by mocha
-    "beforeEach",       // Used by mocha
-    "after",            // Used by mocha
-    "afterEach"         // Used by mocha
+    "describe",
+    "it",
+    "before",
+    "beforeEach",
+    "after",
+    "afterEach"
   ]
 }
