add customization for search behavior
This introduces two possible customizations for search behavior. First
the default search parameter 'q' can be changed, and secondly the model
attributes that are searched can be specified.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "async": "~0.2.10",
     "lodash": "~2.4.1",
+    "merge-defaults": "~0.2.1",
     "inflection": "1.5.3"
   },
   "devDependencies": {
