--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 
+node_js:
+  - "0.10"
+  - "0.12"
+  - "iojs"
+
 sudo: false
+
 cache:
   directories:
     - node_modules
-
-node_js:
-  - 0.10
 
 env:
   -
