--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "api"
   ],
   "dependencies": {
-    "async": "~0.2.10",
-    "lodash": "~2.4.1",
+    "async": "~0.9.0",
+    "lodash": "~3.3.0",
     "merge-defaults": "~0.2.1",
-    "inflection": "1.5.3"
+    "inflection": "~1.6.0"
   },
   "devDependencies": {
-    "sqlite3": "~2.2.0",
-    "request": "~2.34.0",
-    "express": "3.x",
+    "sqlite3": "^3.0.5",
+    "request": "^2.53.0",
+    "express": "^4.11.2",
+    "body-parser": "^1.12.0",
     "restify": "~2.8.3",
-    "mocha": ">=1.17.0",
-    "chai": ">= 1.9.0",
-    "jshint": ">=2.4.2",
-    "istanbul": "~0.1.45",
+    "mocha": "^2.1.0",
+    "chai": "^2.0.0",
+    "jshint": "^2.6.0",
+    "istanbul": "^0.3.6",
     "sequelize": "git://github.com/sequelize/sequelize#master"
   }
 }
