--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "request": "^2.53.0",
     "express": "^4.11.2",
     "body-parser": "^1.12.0",
-    "restify": "~2.8.3",
+    "restify": "^2.8.5",
     "mocha": "^2.1.0",
     "chai": "^2.0.0",
     "jshint": "^2.6.0",
