make coverage do well properly in windows 7 Operation System
make "npm run coverage" do well in windows 7 Operation System

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "jshint": "jshint ./lib ./tests",
     "mocha": "mocha --check-leaks -R spec -u exports tests/*.test.js tests/**/*.test.js",
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- -- tests/*.test.js tests/**/*.test.js",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- tests/*.test.js tests/**/*.test.js",
     "test": "npm run-script jshint && npm run-script mocha"
   },
   "repository": {
